--- a/src/components/LongPress/manifest.json
+++ b/src/components/LongPress/manifest.json
@@ -1,21 +1,26 @@
 {
-  "displayName": "Long Press",
-  "defaultWidth": 160,
-  "defaultHeight": 24,
-  "components": "./index.js",
-  "icon": "./example-thumbnail.png",
-  "props": [
-    {
-      "name": "text",
-      "displayName": "Text",
-      "type": "text",
-      "default": "Happy Hacking"
-    },
-    {
-      "name": "color",
-      "displayName": "Color",
-      "type": "color",
-      "default": "#00A898"
-    }
-  ]
+    "displayName": "Long Press",
+    "defaultWidth": 160,
+    "defaultHeight": 24,
+    "components": "./index.js",
+    "icon": "./example-thumbnail.png",
+    "props": [
+        {
+            "name": "text",
+            "displayName": "Text",
+            "type": "text",
+            "default": "Happy Hacking"
+        },
+        {
+            "name": "color",
+            "displayName": "Color",
+            "type": "color",
+            "default": "#00A898"
+        },
+        {
+            "name": "Test",
+            "displayName": "Test Prop",
+            "type": "text"
+        }
+    ]
 }
