React-Native-Popup-Menu: setup and usage is complete, need menu to show up on bottom of screen now

--- a/src/components/LongPress/manifest.json
+++ b/src/components/LongPress/manifest.json
@@ -21,6 +21,20 @@
             "name": "Test",
             "displayName": "Test Prop",
             "type": "text"
+        },
+        {}
+    ],
+    "childComponents": [
+        {
+            "name": "actions",
+            "displayName": "Actions",
+            "props": [
+                {
+                    "name": "useActions",
+                    "displayName": "Click Actions",
+                    "type": "action"
+                }
+            ]
         }
     ]
 }
